<resources><string name="app_name">Repertory</string><string name="action_settings">Settings</string><string name="research">Rechercher...</string><string name="delete_element">Supprimer l\'élément</string><string name="default_string">Default</string><string name="key">Nom de l\'élément</string><string name="value">Valeur de l\'élément</string><string name="cancel">Annuler</string><string name="create">Créer</string><string name="save">Sauvegarder</string><string name="close">Fermer</string><string name="add_element">Ajouter un élément</string></resources>