<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"><EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="15px" android:text="@string/default_string" android:hint="@string/key" android:id="@+id/view_element_key" android:inputType="text" /><EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="15px" android:text="@string/default_string" android:hint="@string/value" android:id="@+id/view_element_value" android:inputType="text" /><LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal"><Button android:text="@string/close" android:backgroundTint="@android:color/white" android:textColor="@android:color/black" android:id="@+id/close_modif" android:layout_marginLeft="100px" android:layout_width="wrap_content" android:layout_height="wrap_content" /><Button android:text="@string/save" android:backgroundTint="@android:color/white" android:textColor="@android:color/black" android:id="@+id/save_btn" android:layout_marginLeft="20px" android:layout_width="wrap_content" android:layout_height="wrap_content" /></LinearLayout></LinearLayout>