<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent" xmlns:android="http://schemas.android.com/apk/res/android"><EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="15px" android:id="@+id/key_input" android:hint="@string/key" android:inputType="text" /><EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="15px" android:id="@+id/value_input" android:hint="@string/value" android:inputType="text" /><LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal"><Button android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="120px" android:id="@+id/cancel_create" android:text="@string/cancel" /><Button android:layout_width="wrap_content" android:layout_height="match_parent" android:layout_marginLeft="20px" android:id="@+id/create_element_btn" android:text="@string/create" /></LinearLayout></LinearLayout>